# vulkan-practice

./: .gitignore  .gitmodules  CMakeLists-backup.txt  CMakeLists.txt
assets/shaders/GLSL/: basic.vert
scripts/mingw/: reconfig.bat  run.bat  setup.bat
scripts/msvc/: reconfig.bat  run.bat
scripts/windows/: br.bat  build-release.bat  build.bat  color.ps1  debug.bat  reconfig.bat  reinitv.bat  release.bat  run-release.bat  run.bat  setup.bat
src/: Application.cpp  Application.h  Core.h  Log.cpp  Log.h  Main.cpp  Window.cpp  Window.h  pch.h
